--- a/Cinema/src/main/resources/i18n_en.properties
+++ b/Cinema/src/main/resources/i18n_en.properties
@@ -76,6 +76,7 @@ session.time=Time
 session.ticketPrice=Ticket price
 session.seatsRemain=Seats remain
 session.buyTicket=Buy ticket
+session.sessionInfor=Session Detail
 session.chooseSeat=Choose your seat
 session.sessionSeat=Seats for session
 
