--- a/Cinema/src/main/resources/i18n_en.properties
+++ b/Cinema/src/main/resources/i18n_en.properties
@@ -1,6 +1,6 @@
 #GENERAL
-mainPage.title=Cinema EPAM
-general.currency.short=UAH
+mainPage.title=Cinema
+general.currency.short=VN\u0110
 general.selector.multipleSelectTips=*Hold down the Ctrl (Windows)/Command (Mac) button to select multiple options
 
 #menu
@@ -32,21 +32,21 @@ login.pageTitle=Login tot profile
 login.text=Please sign in
 
 #form default
-form.requiredField=(b\u1eaft bu\u1ed9c)
-form.nonRequiredField=(kh\u00f4ng b\u1eaft bu\u1ed9c)
-form.email=\u0110\u1ecba ch\u1ec9 email
-form.signup=\u0110\u0103ng k\u00fd
-form.signupBtn=\u0110\u0103ng k\u00fd
-form.password=M\u1eadt kh\u1ea9u
+form.requiredField=(required)
+form.nonRequiredField=(non required)
+form.email=Email address
+form.signup=Sign in
+form.signupBtn=Sign up
+form.password=password
 form.passwordMatch=Match
 form.passwordNotMatch=Not matching
-form.passwordRepeat=Nh\u1eadp l\u1ea1i m\u1eadt kh\u1ea9u
-form.fName=H\u1ecd v\u00e0 t\u00ean \u0111\u1ec7m
-form.sName=T\u00ean
-form.phoneNumber=S\u1ed1 \u0111i\u1ec7n tho\u1ea1i
+form.passwordRepeat=re-password
+form.fName=First name
+form.sName=Last name
+form.phoneNumber=Phone number
 form.rememberMe=Remember me
-form.signin=\u0110\u0103ng nh\u1eadp
-form.notification=Nh\u1eadn th\u00f4ng b\u00e1o
+form.signin=Sign in
+form.notification=Notification
 
 #filmList
 filmList.title=Current films
